local-minikube-virtualbox/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app
  labels:
    app.kubernetes.io/name: django-service
    app.kubernetes.io/env: dev
    app.kubernetes.io/owner: SergeyPavlov
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
  externalIPs:
    - xx.xx.xx.xx
